# ChangeLog for dev-python/boto
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/boto/ChangeLog,v 1.37 2012/02/18 03:12:01 radhermit Exp $

*boto-2.2.2 (18 Feb 2012)

  18 Feb 2012; Tim Harder <radhermit@gentoo.org> +boto-2.2.2.ebuild:
  Version bump (fixes bug #404153).

  01 Feb 2012; Brent Baude <ranger@gentoo.org> boto-2.0.ebuild:
  Marking boto-2.0 ppc for bug 391437

  28 Nov 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> boto-2.0.ebuild:
  x86 stable wrt bug #391437

  26 Nov 2011; Markos Chandras <hwoarang@gentoo.org> boto-2.0.ebuild:
  Stable on amd64 wrt bug #391437

*boto-2.1.1 (09 Nov 2011)

  09 Nov 2011; Tim Harder <radhermit@gentoo.org> +boto-2.1.1.ebuild:
  Version bump.

*boto-2.0 (20 Jul 2011)

  20 Jul 2011; Tim Harder <radhermit@gentoo.org> -boto-2.0_beta3.ebuild,
  -boto-2.0_beta4.ebuild, +boto-2.0.ebuild:
  Version bump and remove old.

*boto-2.0_beta4 (02 May 2011)

  02 May 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +boto-2.0_beta4.ebuild:
  Version bump.

  04 Jan 2011; Michael Weber <xmw@gentoo.org> boto-1.9b.ebuild,
  boto-2.0_beta3.ebuild:
  added ~sparc keyword (bug 279975)

*boto-2.0_beta3 (16 Oct 2010)

  16 Oct 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -boto-2.0_beta2.ebuild, +boto-2.0_beta3.ebuild:
  Version bump.

  28 Sep 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -boto-1.6b.ebuild:
  Delete.

  28 Sep 2010; Brent Baude <ranger@gentoo.org> boto-1.9b.ebuild:
  stable ppc, bug 326815

*boto-2.0_beta2 (27 Sep 2010)

  27 Sep 2010; Dirkjan Ochtman <djc@gentoo.org> +boto-2.0_beta2.ebuild:
  Version bump to 2.0b2.

  27 Sep 2010; Dirkjan Ochtman <djc@gentoo.org> -boto-1.8d.ebuild:
  Remove old unneeded version.

  17 Jul 2010; Christian Faulhammer <fauli@gentoo.org> boto-1.9b.ebuild:
  stable x86, bug 326815

  04 Jul 2010; Markos Chandras <hwoarang@gentoo.org> boto-1.9b.ebuild: